.devcontainer/envoy.yaml
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
    
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 443
      filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                  - name: google
                    domains:
                      - "google.com"
                    routes:
                      - match:
                          prefix: "/"
                        route:
                          cluster: google_cluster
                  - name: youtube
                    domains:
                      - "youtube.com"
                    routes:
                      - match:
                          prefix: "/"
                        route:
                          cluster: whoami_cluster
                        request_headers_to_add:
                          - header:
                              key: X-Client-IP
                              value: 'Test'
                          

              http_filters:
                - name: envoy.filters.http.router
                  typed_config: {}

          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                alpn_protocols: [ "h2,http/1.1" ]
                tls_certificates:
                  - certificate_chain: { filename: "/etc/example-com.crt" }
                    private_key: { filename: "/etc/example-com.key" }
                    password: { inline_string: "3bsEEVF8ZJYDducq" }
                tls_params:
                  tls_maximum_protocol_version: TLSv1_3



  clusters:
    - name: google_cluster
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: frontend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: google.com
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
    - name: whoami_cluster
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: frontend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: whoami
                      port_value: 80
